uniprot/gce-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  labels:
    app: kubeless-uniprotcachefn
  name: uniprotcachefn
  namespace: dictybase
spec:
  rules:
    - host: betafunc.dictybase.org
      http:
        paths:
          - backend:
              serviceName: uniprotcachefn
              servicePort: 8080
            path: /geneids/ucache
  tls:
    - hosts:
        - betafunc.dictybase.org
      secretName: dictybeta-staging-org-tls
